--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-467.1KB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32912, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.04MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-3.59MB/s(Youtube:不良林), server: c86s5.jamjams3.net, port: 31567, type: vmess, uuid: 7e98d7df-0fc1-45f3-8a0c-f840218b4c22, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.62MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: csdld.jddsb.cf, port: 443, type: vmess, uuid: d91e7dd1-b10a-4bdb-ad58-9ff66b27635c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: csdld.jddsb.cf}}
-  - {name: 🇺🇸 美国-638.7KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-4.22MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-337.5KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇺🇸 美国-5.07MB/s(Youtube:不良林), server: c86s801.jamjams3.net, port: 31567, type: vmess, uuid: 7e98d7df-0fc1-45f3-8a0c-f840218b4c22, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-460.1KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.98MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-332.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-7.08MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.59MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.62MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-638.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-337.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-460.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
