--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.30MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-14.72MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-467.1KB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32912, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-297.2KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇯🇵 日本-337.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇯🇵 日本-7.08MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.27MB/s(Youtube:不良林), server: csdld.jddsb.cf, port: 443, type: vmess, uuid: d91e7dd1-b10a-4bdb-ad58-9ff66b27635c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: csdld.jddsb.cf}}
-  - {name: 🇨🇳 中国-11.23MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40202, type: trojan, password: a04f6f85-18a7-3f41-8389-663ebae403cf, sni: trojan.linkdns.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.10MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
+  - {name: 🇺🇸 美国-836.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.25MB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
+  - {name: 🇺🇸 美国-332.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-4.39MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-8.32MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.03MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇸🇬 新加坡-1.54MB/s(Youtube:不良林), server: csxjp.jddsb.cf, port: 443, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: csxjp.jddsb.cf}}
+  - {name: 匈牙利-2.65MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 匈牙利-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 匈牙利-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 匈牙利-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 匈牙利-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 匈牙利-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 匈牙利-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-467.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-297.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.10MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 匈牙利-2.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
