--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-337.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-7.08MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-836.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.25MB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
-  - {name: 🇺🇸 美国-332.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-4.39MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-8.32MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.03MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇸🇬 新加坡-1.54MB/s(Youtube:不良林), server: csxjp.jddsb.cf, port: 443, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: csxjp.jddsb.cf}}
+  - {name: 🇯🇵 日本-3.90MB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1008, type: vmess, uuid: d91e7dd1-b10a-4bdb-ad58-9ff66b27635c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
+  - {name: 🇯🇵 日本-2.77MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇰🇷 韩国-4.22MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.37MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-410.2KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 匈牙利-2.65MB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-7.67MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-315.7KB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.12MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-497.9KB/s(Youtube:不良林), server: 626sg05.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 626sg05.ok365.cyou, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
       - 匈牙利-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-497.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
       - 匈牙利-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-497.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
       - 匈牙利-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-497.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
       - 匈牙利-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-497.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
       - 匈牙利-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-497.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
       - 匈牙利-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-497.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-337.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-836.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-332.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.32MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.90MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.77MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.22MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
       - 匈牙利-2.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-7.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.12MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-497.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
