--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: c86s801.jamjams3.net, port: 31567, type: vmess, uuid: 7e98d7df-0fc1-45f3-8a0c-f840218b4c22, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.07MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
-  - {name: 🇺🇸 美国-3.78MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.37MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-410.2KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.40MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.69MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇬🇧 英国-2.58MB/s(Youtube:不良林), server: chunchuan-02.aikala.shop, port: 80, type: vmess, uuid: a6d2838b-1027-4800-b664-16840d156d62, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: chunchuan-02.aikala.shop}}
-  - {name: 🇸🇬 新加坡-547.9KB/s(Youtube:不良林), server: 625hk.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 625hk.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.60MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-389.2KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-21.15MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-9.61MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇬🇧 英国-3.35MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.49MB/s(Youtube:不良林), server: 625hk01.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 625hk01.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-378.6KB/s(Youtube:不良林), server: 625hk05.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 625hk05.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-592.3KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8060, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
+  - {name: 🇨🇳 中国-5.04MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8020, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-547.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-547.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-547.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-547.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-547.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-547.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.78MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-410.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.58MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-547.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-389.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-378.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-592.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
